cf-network.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
 Network IaC for General Immersion Day. It assembles VPC, subnets and etc. by https://catalog.workshops.aws/general-immersionday/en-US/basic-modules/20-vpc/vpc 

Resources:
  VpcLab:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags: 
        - Key: 'Name'
          Value: 'VPC-Lab'
        - Key: Application
          Value : !Ref AWS::StackId

  NetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VpcLab

  NaclInboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
  
  NaclOutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkAcl
      RuleNumber: 100
      Egress: true
      Protocol: -1
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties: 
      VpcId: !Ref VpcLab
      CidrBlock: 10.1.10.0/24
      AvailabilityZone: 'ap-northeast-2a'
      Tags:
        - Key: 'Name'
          Value: 'public subnet A'
  
  NaclAssociateWithPubSubnetA:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      NetworkAclId: !Ref NetworkAcl

  LabInternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachmentIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref LabInternetGateway
      VpcId: !Ref VpcLab
  
  LabRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VpcLab

  RouteToIGW:
    Type: AWS::EC2::Route
    DependsOn: AttachmentIGW
    Properties:
      RouteTableId:
        Ref: LabRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: LabInternetGateway
    
  RouteTableAssociationToPublicSubnetA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref LabRouteTable
      SubnetId: !Ref PublicSubnetA

  PublicSubnetC:
    Type: AWS::EC2::Subnet
    DependsOn: VpcLab
    Properties: 
      VpcId: !Ref VpcLab
      CidrBlock: 10.1.20.0/24
      AvailabilityZone: 'ap-northeast-2c'
      Tags:
        - Key: 'Name'
          Value: 'public subnet C'

  NaclAssociateWithPubSubnetC:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnetC
      NetworkAclId: !Ref NetworkAcl

  RouteTableAssociationToPublicSubnetC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref LabRouteTable
      SubnetId: !Ref PublicSubnetC

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VpcLab
    Properties: 
      GroupDescription: SG for Web Server on pulic subnet, HTTP & SSH
      VpcId: !Ref VpcLab
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
